# animeclick-db

./: .env.example  .gitignore  README.md  browser_crawler_config.md  cache_modes.md  content_selection.md  crawler_results.md  dataset_maker.py  hooks_and_auth.md  indentity_based_crawling.md  json_extraction.md  link_and_media.md  local_files.md  main.py  markdown_generation.md  multi_url_crawling.md  page_interaction.md  pyproject.toml  recommendation.py  session_management.md  simple_crawling.md  ssl_certificates.md
data/: manga_tags.json
